<resources>
    <string name="app_name">Tindar</string>
    <string name="filler">How the Cool Kids Date</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_log_in">Log in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>

    <!-- Strings related to signup -->
    <string name="your_name">Your Name</string>
    <string name="re_type_password">Re-type Password</string>

    <!-- Strings related to other screens -->
    <string name="name">Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="profile_picture_link">Profile Picture Link</string>
    <string name="about_me">About Me</string>
    <string name="click_to_edit_profile">Click to edit Profile</string>
    <string name="filters">Filters</string>
    <string name="click_to_edit_filters">Click to edit Filters</string>
    <string name="choose_preferred_gender">Choose Preferred Gender</string>
    <string name="choose_preferred_location">Choose Preferred Location</string>
    <string name="preferred_locations">Preferred Locations</string>
    <string name="preferred_genders">Preferred Genders</string>
    <string name="preferred_age_group">Preferred Age Group</string>
    <string name="minimum_age">minimum age</string>
    <string name="maximum_age">maximum age</string>
    <string name="click_to_edit_preferred_genders">Click to edit Preferred Genders</string>
    <string name="click_to_edit_preferred_locations">Click to edit Preferred Locations</string>
    <string name="click_to_edit_preferred_age_group">Click to edit Preferred Age Group</string>
    <string-array name="genders">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string-array name="locations">
        <item>Calgary</item>
        <item>Montreal</item>
        <item>Toronto</item>
        <item>Vancouver</item>
    </string-array>
    <string name="title_activity_blank_nav">blankNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_placeholder">Placeholder</string>
    <string name="menu_match_list">Matches</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_filters">Filters</string>
    <string name="submit">Submit</string>
    <string name="my_profile">My Profile</string>

    <string name="start_search">Start search!</string>
    <string name="next_button">next button</string>
    <string name="previous_button">previous button</string>
    <string name="home_image">home image</string>
    <string name="like_or_dislike">like or dislike</string>

    <string name="action_log_out">Log Out</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="submit_email">Submit Email</string>
    <string name="submit_password">Submit Password</string>
    <string name="retype_email">Retype Email</string>
    <string name="new_email">New Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password_2">Current Password</string>
    <string name="inputs_do_not_match">Inputs do not match</string>
    <string name="email_already_used">Email already used</string>
    <string name="current_password_incorrect">Current password incorrect</string>
    <string name="password_validation">Current password</string>
    <string name="password_not_six_long">Passwords must be at least 6 characters long.</string>
    <string name="username">Username</string>
    <string name="tap_here_to_go_back">Tap here to go back</string>
    <string name="message">Message</string>
    <string name="tap_to_send_your_typed_message">Tap to send your typed message</string>
    <string name="conversations">Conversations</string>
</resources>
